<resources>
    <string name="app_name">Alura Viagens</string>
    <string name="banner_descricao">Banner inicial dos pacotes</string>
    <string name="especiais">Especiais</string>
    <string name="pais">Brasil</string>
    <string name="preco_final">Preço Final:</string>
    <string name="realizar_pagamento">Realizar Pagamento</string>
    <string name="imagem_do_pacote">Imagem do Pacote</string>
    <string name="mascara_nome_no_cartao">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZçÇéÉ\u0020</string>
    <string name="orientacao_pagamento">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="valor_da_compra">Valor da compra:</string>
    <string name="nome_no_cartao">Nome no cartão</string>
    <string name="numero_do_cartao">Número do cartão</string>
    <string name="mes_cartao">MM</string>
    <string name="ano_cartao">AA</string>
    <string name="cvc_cartao">CVC</string>
    <string name="compra_realizada_com_sucesso">Compra realizada com sucesso :)</string>
    <string name="confira_o_resumo_da_sua_compra">Confira o resumo da sua compra:</string>
    <string name="parabens">Parabéns!</string>
</resources>
